--- a/.github/workflows/cleavr_nsujocblyc.yml
+++ b/.github/workflows/cleavr_nsujocblyc.yml
@@ -65,7 +65,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: '${{ steps.artifact.outputs.formattedTime }}'
-          path: .next/
+          path: ./.next
           if-no-files-found: error
 
   complete:
